[gd_scene load_steps=3 format=3 uid="uid://cjhi1dpam7bra"]

[ext_resource type="Script" path="res://uiControl.gd" id="1_wxgdl"]
[ext_resource type="Texture2D" uid="uid://bkm73pptsmget" path="res://src/assets/cardBase.png" id="2_lrt2d"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wxgdl")

[node name="first_draft" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.156
anchor_top = 0.21
anchor_right = 0.195
anchor_bottom = 0.296
offset_left = -28.712
offset_top = 17.92
offset_right = -28.64
offset_bottom = 18.192
scale = Vector2(5.00879, 5.01673)
texture_normal = ExtResource("2_lrt2d")

[node name="first_label" type="Label" parent="."]
modulate = Color(0, 0, 0, 1)
top_level = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.156
anchor_top = 0.5
anchor_right = 0.291
anchor_bottom = 0.616
offset_left = 14.288
offset_top = -5.0
offset_right = -0.231995
offset_bottom = -0.16803
text = "he"

[node name="second_draft" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.156
anchor_top = 0.21
anchor_right = 0.195
anchor_bottom = 0.296
offset_left = 280.288
offset_top = 17.92
offset_right = 280.36
offset_bottom = 18.192
scale = Vector2(5.00879, 5.01673)
texture_normal = ExtResource("2_lrt2d")

[node name="second_label" type="Label" parent="."]
modulate = Color(0, 0, 0, 1)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.414
anchor_top = 0.5
anchor_right = 0.559
anchor_bottom = 0.616
offset_left = 24.072
offset_top = -5.0
offset_right = 0.0319824
offset_bottom = -0.16803
text = "he"

[node name="third_draft" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.156
anchor_top = 0.21
anchor_right = 0.195
anchor_bottom = 0.296
offset_left = 593.288
offset_top = 17.92
offset_right = 593.36
offset_bottom = 18.192
scale = Vector2(5.00879, 5.01673)
texture_normal = ExtResource("2_lrt2d")

[node name="third_label" type="Label" parent="."]
modulate = Color(0, 0, 0, 1)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.414
anchor_top = 0.5
anchor_right = 0.559
anchor_bottom = 0.616
offset_left = 337.072
offset_top = -5.0
offset_right = 310.032
offset_bottom = -10.168
text = "he"
